--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <title>Felicity Jones</title>
+    <title> Rafael da Costa </title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="Curriculum vitae Felicity Jones" />
+    <meta name="description" content="Curriculum vitae Rafael da Costa" />
     <meta name="keywords" content="curriculo, vitae, geek, university, git, github" />
     <link rel="shortcut icon" href="favicon.ico">
 
@@ -35,7 +35,7 @@
       <header id="site_header" class="header mobile-menu-hide">
         <div class="header-content">
           <div class="site-title-block mobile-hidden">
-            <a href="index.html#home"><div class="site-title">Felicity <span>Jones</span></div></a>
+            <a href="index.html#home"><div class="site-title">Rafael <span>da Costa</span></div></a>
           </div>
 
           <!-- Navigation -->
@@ -65,7 +65,7 @@
       <!-- Mobile Header -->
       <div class="mobile-header mobile-visible">
         <div class="mobile-logo-container">
-          <div class="mobile-site-title">Felicity Jones</div>
+          <div class="mobile-site-title"> Rafael da Costa </div>
         </div>
 
         <a class="menu-toggle mobile-visible">
@@ -88,27 +88,27 @@
                   <div class="row">
                     <div class="col-sm-4 col-md-4 col-lg-4">
                       <div class="photo">
-                        <img src="images/felicity.jpeg" alt="Felicity Jones">
+                        <img src="images/rafael.jpeg" alt="Rafael da Costa">
                       </div>
                     </div>
 
                     <div class="col-sm-8 col-md-8 col-lg-8">
                       <div class="title-block">
-                        <h1>Felicity Jones</h1>
+                        <h1>Rafael da Costa</h1>
                         <div class="owl-carousel text-rotation">                                    
                           <div class="item">
-                            <div class="sp-subtitle">Web Designer</div>
+                            <div class="sp-subtitle">Devops Enginer</div>
                           </div>
                           <div class="item">
-                            <div class="sp-subtitle">Frontend-developer</div>
+                            <div class="sp-subtitle">Administrador de Redes</div>
                           </div>
                         </div>
                       </div>
 
                       <div class="social-links">
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/rfdcosta/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100003170064744" target="_blank"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/rafa_da.costa/" target="_blank" ><i class="fa fa-instagram"></i></a>
                       </div>
                     </div>
                   </div>
@@ -122,22 +122,22 @@
                         <div class="block-title">
                           <h3>Quem <span>Sou?</span></h3>
                         </div>
-                        <p>Olá! Eu sou a Felicity Jones. Gosto de gatos, video games e programação. Aqui você irá encontrar algumas outras
-                        informações sobre mim.</p>
+                        <p>Olá! Eu sou a Rafael da Costa tenho formação em DevOps Engineer atualmente sou Administrador de Redes, apaixonado por tecnologia e otimização de sistemas. Minha missão é conectar eficiência e inovação para transformar desafios em soluções inteligentes. 
+                          Aqui você irá encontrar algumas outras informações sobre mim.</p>
                       </div>
                       <div class="download-resume">
-                        <a href="cv/resume.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
+                        <a href="cv/Curriculo_Rafael.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
                       </div>
                     </div>
 
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <ul class="info-list">
-                        <li><span class="title">Idade</span><span class="value">29</span></li>
+                        <li><span class="title">Idade</span><span class="value">32</span></li>
                         <li><span class="title">Nacionalidade</span><span class="value">Brasil</span></li>
-                        <li><span class="title">Cidade/Estado</span><span class="value">São Paulo, SP</span></li>
-                        <li><span class="title">E-mail</span><span class="value">felicity@geekuniversity.com.br</span></li>
-                        <li><span class="title">Fone</span><span class="value">+5511 123 456 789</span></li>
-                        <li><span class="title">Freelance</span><span class="value available">Disponível</span></li>
+                        <li><span class="title">Cidade/Estado</span><span class="value">Alvorada, RS</span></li>
+                        <li><span class="title">E-mail</span><span class="value">rafa.f.costa1@gmail.com</span></li>
+                        <li><span class="title">Fone</span><span class="value">+5551992147697</span></li>
+                        <li><span class="title">FreeLance </span><span class="value available">Indisponivel</span></li>
                       </ul>
                     </div>
 
@@ -202,28 +202,38 @@
                         <div class="timeline">
                           <!-- Experience 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Frontend-developer</h4>
-                            <span class="item-period">Dec 2012 - Current</span>
-                            <span class="item-small">Web Agency</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Administrador de Redes</h4>
+                            <span class="item-period">Maio 2024 - Current</span>
+                            <span class="item-small">Rede Brasil</span>
+                            <p class="item-description">Administração de rede.</p>
                           </div>
                           <!-- / Experience 1 -->
 
                           <!-- Experience 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Web Designer</h4>
-                            <span class="item-period">Dec 2011 - Nov 2012</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Analista de rede</h4>
+                            <span class="item-period">Ago 2018 - Maio 2024</span>
+                            <span class="item-small">Prefeitura Municipal de Alvorada</span>
+                            <p class="item-description">* Responsável pelo planejamento e controle de usuários LDAP, garantindo a segurança e o acesso adequado aos recursos de TI.
+                              * Gerenciamento da infraestrutura de TI, assegurando a disponibilidade e eficiência dos serviços e aplicações essenciais.
+                              * Colaboração ativa em projetos de informatização da Secretaria Municipal de Saúde, buscando incorporar tecnologias inovadoras e práticas alinhadas com DevOps.
+                              * Participação em processos de licitação para aquisição de serviços e equipamentos de TI, visando manter a infraestrutura atualizada e moderna.
+                              * Coordenação estratégica do setor técnico em projetos de informatização na Secretaria Municipal de Saúde de Alvorada.
+                              * Elaboração de termos de referência para aquisição de equipamentos e serviços de TI, visando a melhoria contínua dos processos.
+                              * Gerenciamento eficiente de chamados e atendimento de tickets, garantindo a rápida resolução de questões relacionadas a TI.
+                              * Identificação de oportunidades para a implementação de práticas e ferramentas DevOps em projetos, aprimorando a colaboração e automação.</p>
                           </div>
                           <!-- / Experience 2 -->
 
                           <!-- Experience 3 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Graphic Designer</h4>
-                            <span class="item-period">Jan 2010 - Dec 2011</span>
-                            <span class="item-small">Apple Inc.</span>
-                            <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
+                            <h4 class="item-title">Tecnico em informatica</h4>
+                            <span class="item-period">Jan 2017 - Jul 2018</span>
+                            <span class="item-small">Prefeitura Municipal de Alvorada</span>
+                            <p class="item-description">* Suporte à infraestrutura de Unidades Básicas de Saúde, garantindo a disponibilidade e estabilidade dos sistemas.
+                              * Suporte técnico ao sistema E-Cidade, assegurando a continuidade do serviço.
+                              * Participação na migração bem-sucedida de sistema de prontuário eletrônico, priorizando a efetiva utilização das funcionalidades.
+                              * Atendimento e suporte direto aos usuários finais, resolvendo questões de TI de forma ágil e cordial</p>
                           </div>
                           <!-- / Experience 3 -->
                         </div>
