ajustado configurações da aba curriculo

--- a/index.html
+++ b/index.html
@@ -165,34 +165,34 @@
                         <div class="timeline">
                           <!-- Education 1 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
+                            <h4 class="item-title">Engenharia Devops</h4>
+                            <span class="item-period">2023</span>
+                            <span class="item-small">unyleya</span>
                             <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
                           </div>
                           <!-- / Education 1 -->
 
                           <!-- Education 2 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
+                            <h4 class="item-title">Redes de Computadores</h4>
+                            <span class="item-period">2022</span>
+                            <span class="item-small">Centro Universitario Senac RS</span>
                             <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
                           </div>
                           <!-- / Education 2 -->
 
                           <!-- Education 3 -->
                           <div class="timeline-item">
-                            <h4 class="item-title">Specialization Course</h4>
-                            <span class="item-period">2010</span>
-                            <span class="item-small">Apple Inc.</span>
+                            <h4 class="item-title">Tecnico em Informatica</h4>
+                            <span class="item-period">2017</span>
+                            <span class="item-small">Escola Dom João Becker</span>
                             <p class="item-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
                           </div>
                           <!-- / Education 3 -->
                         </div>
                       </div>
                     </div>
-
+                   
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
@@ -240,26 +240,26 @@
                       </div>
                     </div>
                   </div>
-
+                  
                   <div class="row">
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Design <span>Skills</span></h3>
+                          <h3>#<span>#</span></h3>
                         </div>
 
                         <div class="skills-info">
-                          <h4>Web Design</h4>                               
+                          <h4>#</h4>                               
                           <div class="skill-container">
                             <div class="skill-percentage skill-1"></div>
                           </div>
 
-                          <h4>Graphic Design</h4>
+                          <h4>#</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-2"></div>
                           </div>
 
-                          <h4>Print Design</h4>
+                          <h4>#</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-3"></div>
                           </div> 
@@ -271,7 +271,7 @@
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="block">
                         <div class="block-title">
-                          <h3>Coding <span>Skills</span></h3>
+                          <h3># <span>Skills</span></h3>
                         </div>
 
                         <div class="skills-info">
