Inserido cursos realizados e imagens.

--- a/index.html
+++ b/index.html
@@ -261,14 +261,14 @@
             <section class="pt-page" data-id="services">
               <div class="section-inner custom-page-content">
                 <div class="page-header color-1">
-                  <h2>Serviços Prestados</h2>
+                  <h2>Cursos Realizado</h2>
                 </div>
                 <div class="page-content">
                   <!-- My Services -->
                   <div class="row">
                     <div class="col-sm-12 col-md-12">
                       <div class="block-title">
-                        <h3>Sou <span>boa em...</span></h3>
+                        <h3>Fiz Curso <span> em...</span></h3>
                       </div>
                     </div>
 
@@ -277,9 +277,21 @@
                         <div class="service-info">
                           <!--<i class="service-icon fa fa-shopping-cart"></i>-->
                           <div class="service-image">
-                            <img src="images/service/web_design_icon.png" alt="Responsive Design" class="mCS_img_loaded">
+                            <img src="images/service/web.png" alt="Responsive Design" class="mCS_img_loaded">
                           </div>
                           <h4>Web Design</h4>
+                          <p></p>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-sm-6 col-md-3">
+                      <div class="service-block"> 
+                        <div class="service-info">
+                          <div class="service-image">
+                            <img src="images/service/docker.png" alt="Photography" class="mCS_img_loaded">
+                          </div>
+                          <h4>Docker</h4>
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
                         </div>
                       </div>
@@ -289,9 +301,9 @@
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
-                            <img src="images/service/photography_icon.png" alt="Photography" class="mCS_img_loaded">
+                            <img src="images/service/ks8.png" alt="Creativity" class="mCS_img_loaded">
                           </div>
-                          <h4>Photography</h4>
+                          <h4>Kubernetes</h4>
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
                         </div>
                       </div>
@@ -301,21 +313,9 @@
                       <div class="service-block"> 
                         <div class="service-info">
                           <div class="service-image">
-                            <img src="images/service/creativity_icon.png" alt="Creativity" class="mCS_img_loaded">
+                            <img src="images/service/eng.png" alt="Advetising" class="mCS_img_loaded">
                           </div>
-                          <h4>Management</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="col-sm-6 col-md-3">
-                      <div class="service-block"> 
-                        <div class="service-info">
-                          <div class="service-image">
-                            <img src="images/service/advetising_icon.png" alt="Advetising" class="mCS_img_loaded">
-                          </div>
-                          <h4>Advertising</h4>
+                          <h4>Inglês</h4>
                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
                         </div>
                       </div>
@@ -330,7 +330,7 @@
             <!-- End of Services Subpage -->
 
 
-            <!-- Portfolio Subpage -->
+           
 
 
                     <!-- Portfolio Grid -->
