incluido cursos realizados.

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <section class="pt-page" data-id="services">
               <div class="section-inner custom-page-content">
                 <div class="page-header color-1">
-                  <h2>Cursos Realizado</h2>
+                  <h2>Cursos Realizados</h2>
                 </div>
                 <div class="page-content">
                   <!-- My Services -->
@@ -280,7 +280,7 @@
                             <img src="images/service/web.png" alt="Responsive Design" class="mCS_img_loaded">
                           </div>
                           <h4>Web Design</h4>
-                          <p></p>
+                          <p>Realizei curso de web designer no site prime cursos, no qual desenvolvi conhecimento solido na estrutura de criação de sites e web sites em html.</p>
                         </div>
                       </div>
                     </div>
@@ -292,7 +292,7 @@
                             <img src="images/service/docker.png" alt="Photography" class="mCS_img_loaded">
                           </div>
                           <h4>Docker</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                          <p>Realizei curso de docker essencial para desenvolvedores na geek university, no qual desenvolvi e consolidei conhecimento em Conteinerização, complementando minha pós graduação.</p>
                         </div>
                       </div>
                     </div>
@@ -304,7 +304,7 @@
                             <img src="images/service/ks8.png" alt="Creativity" class="mCS_img_loaded">
                           </div>
                           <h4>Kubernetes</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                          <p>Realizei curso de kubernetes essencial para desenvolvedores na geek university, no qual desenvolvi e consolidei conhecimento em orquestração de containers docker, complementando minha pós graduação.</p>
                         </div>
                       </div>
                     </div>
@@ -316,7 +316,7 @@
                             <img src="images/service/eng.png" alt="Advetising" class="mCS_img_loaded">
                           </div>
                           <h4>Inglês</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+                          <p>Realizei curso de inglẽs de 180horas no IFSUL, agregando em meu conhecimento na lingua inglesa, no qual estudo contantemente para meu aperfeiçoamento.</p>
                         </div>
                       </div>
                     </div>
