--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <div class="col-sm-12 col-md-12 col-lg-12">
                       <div class="block">
                         <div class="center download-resume">
-                          <a href="cv/resume.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
+                          <a href="cv/Curriculo_Rafael.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
                         </div>
                       </div>
                     </div>
